--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mayfest-learning-app",
+  "name": "mayfest-learning-app-empty",
   "version": "0.1.0",
   "private": true,
   "type": "module",
